
icon:check[] Plugins: If plugin initialization fails due to topology changes (e.g. the OrientDB needs to be synchronized from another node), the plugin will be set to
status FAILED_RETRY and initialization will be retried as soon as OrientDB becomes available again.

[[v1.7.9]]
== 1.7.9 (12.05.2021)

icon:check[] OrientDB: The included OrientDB version has been updated to version `3.1.11`.

[[v1.7.8]]
== 1.7.8 (27.04.2021)

icon:check[] Upload: More user-friendly message + HTTP 400 error on an attempt to upload an empty file.

icon:check[] OrientDB: The included OrientDB version has been updated to version `3.1.10`.

icon:check[] Plugins: An issue in the plugin environment has been fixed which prevents plugin REST handler starting over 0.0.0.0 host IP address, when the OS disallows it.

icon:check[] Upload: The document processing library _tika_ has been updated to version `1.26` to fix the PDF parser failing on files with some Adobe fonts.

[[v1.7.7]]
== 1.7.7  (10.03.2021)

icon:plus[] Core: Added support for looking up the node field content by the webroot path and a field name.

icon:plus[] Rest: Added new endpoint for the webroot path field lookup.

[[v1.7.6]]
== 1.7.6  (22.12.2020)

icon:check[] Changelog: Fix the failing on-the-fly migration introduced in 1.7.5. The migration was producing `ClassCastExceptions`.

icon:check[] Jobs: A race condition within the job processing mechanism has been fixed. In some cases newly created jobs would not be automatically invoked. This has been fixed now.

icon:check[] Jobs: New jobs will now set the correct start date and time.

icon:check[] OrientDB: The included OrientDB version has been updated to version `3.1.6`.

icon:check[] OrientDB: A bug in the startup order has been fixed which prevented opening of databases via OrientDB Studio.

icon:check[] Core: Binary upload processing failed for binaries with brackets in the metadata key. This has been fixed now.
