@@ -32,6 +32,8 @@ when the cluster topology changes, which will let reading requests pass and writ
 icon:check[] Plugins: If plugin initialization fails due to topology changes (e.g. the OrientDB needs to be synchronized from another node), the plugin will be set to
 status FAILED_RETRY and initialization will be retried as soon as OrientDB becomes available again.
 
+icon:plus[] Clustering: The timeout for waiting to join the cluster (which includes the time for synchronizing the graphdb storage), which was hardcoded to 500_000 milliseconds, can now be configured with the setting `storage.clusterJoinTimeout` or the environment variable `MESH_GRAPH_CLUSTER_JOIN_TIMEOUT`.
+
 [[v1.7.9]]
 == 1.7.9 (12.05.2021)
 
